# hal_m46x

./: CMakeLists.txt
dts/nuvoton/numicro/: M46x-pinctrl.h
m46x/: CMakeLists.txt
m46x/StdDriver/: CMakeLists.txt
m46x/StdDriver/src/: clk.c
